Checked Italics and Paragraphs

--- a/content/introduction.tex
+++ b/content/introduction.tex
@@ -6,7 +6,7 @@ This document is the handover report of the Software Factory project \textit{Con
 \newline
 The handover document first of all describes the developed product itself, which is an implemented functionality of the mobile application \textit{Connected.Football}. To do so, it is described what frameworks both the application itself and the backend communicating with it are based on, as well as how they communicate. It is furthermore detailed what functionality the project group worked on, with focus on why such a functionality was necessary to be implemented.
 \newline
-This is followed by a guide on how to setup the developed software artefacts. This includes directions as to where to retrieve said artefacts. Following that, it is detailed how the mobile application can be built from the retrieved source code and how the application can be tested on both an emulated Android phone and an actual Android phone, as it was done during development.
+This is followed by a guide on how to setup the developed software artefacts. This includes directions as to where to retrieve said artefacts. Following that, it is detailed how the mobile application can be built from the retrieved source code and how the application can be tested on both an emulated \textit{Android} phone and an actual \textit{Android} phone, as it was done during development.
 \newline
 The next chapter details the work of the project group on a high level view. It is explained where most of the relevant source code can be found and how the developed artefacts interact with each other. This chapter is structured around one particular use case which is used as an example to detail the structure of the source code.
 \newline
