--- a/content/vote4fun.tex
+++ b/content/vote4fun.tex
@@ -4,7 +4,7 @@
 
 This chapter describes functionality of the Vote4Fun extension. The basic idea of this extension is that a coach is able to create a poll for players that will be able to vote for exercises. To do so, a setup wizard was created that takes the user through the necessary steps to create such a poll. The wizard can be found during the creation of a new program, as it can be seen in \textit{Figure \ref{fig:select-wizard-screen}}.
 
-\begin{figure}[ht!]
+\begin{figure}[H]
     \centering
     \includegraphics[width=0.55\textwidth,keepaspectratio]{content/pictures/screencap.png}
 	\caption{Starting the Wizard in \textit{New program}}
