--- a/content/future_development.tex
+++ b/content/future_development.tex
@@ -1,17 +1,17 @@
 \section{Future Development}
 \label{sec:FutureDevelopment}
 \lhead{Future Development}
-This chapter describes where to pick up development and which features could be implemented next.
+This chapter describes where to pick up development and which features could be implemented next. For future development it is recommended to focus on the unfinished parts before aiming at new features.
 
 \subsection{General}
-We encapsulated the parts we developed from the main app so they don't interfere with the main application. Nearly all code we produced can be found found in the following path: \mintinline{latex}{app/pages/private/sofa}. It contains two folders, one for the poll creation wizard and the other for the poll details page.
+We encapsulated the parts we developed from the main application so that they do not interfere with the main application. Nearly all code we produced can be found in the following path: \mintinline{latex}{app/pages/private/sofa}. It contains two folders, one for the poll creation wizard and the other for the poll details page.
 The wizard itself is also split into two parts, the start page and the process where all sub pages are included.
 
-\subsection{Unfinished parts}
+\subsection{Unfinished Parts}
 Because of the limited time and manpower there are some tasks we didn't manage to finish in time. The following components still need some love:
 \begin{itemize}
     \item [-] During the development the data layout changed a little bit, when we started a training didn't have a team associated to it. With the new layout there now is, so the team picker needs to be removed and the team needs to be passed to the wizard.
-    \item [-] The exercise selector needs additional checks for verifying that a correct number of exercises is selected.
+    \item [-] The exercise selector needs additional checks for verifying that a correct number of exercises is selected (between 2 and 4).
     \item [-] The check and accept page of the wizard lacks crucial information: team and selected exercises.
     \item [-] The styling of the wizard pages needs to be reworked.
 \end{itemize}
